init jpa->mp